# Nimble-Reviewer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
nimble_reviewer/: __init__.py  __main__.py  app.py  config.py  diff_mapping.py  finding_match.py  gitlab.py  gitops.py  models.py  prompts.py  renderer.py  review_agent.py  review_rules.py  runtime_state.py  service.py  store.py  trace.py  webhook.py  worker.py
tests/: test_app.py  test_diff_mapping.py  test_gitlab.py  test_gitops.py  test_prompts.py  test_renderer.py  test_review_agent.py  test_review_rules.py  test_service.py  test_store.py  test_webhook.py
